--- a/Textbook/src/main/webapp/login.html
+++ b/Textbook/src/main/webapp/login.html
@@ -8,9 +8,9 @@ html5/loose.dtd">
 <body>
 	<center>
 		<h1>로그인</h1>
-		<img src="./image/remove-background-before-qa1.png" width="200" height="160">
 		<hr>
-		<form action = "#" method="post">
+		<img src="./image/remove-background-before-qa1.png" width="200" height="160">
+		<form action = "loginProcess" method="post">
 			<table border="1" cellpadding ="0" cellspacing="0">
 				<tr>
 					<td bgcolor="orange">아이디 </td>
